Fix li style and nav spacing

--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -3,7 +3,7 @@ $nav-color: $delta
 $nav-hover-color: $gama
 $nav-active-color: $epsilon // Define a color for the active state
 $nav-active-background: $beta // Optional background for active links
-$nav-spacing: 2px
+$nav-spacing: 20px
 $nav-padding: 1px 0
 
 .nav
@@ -17,6 +17,9 @@ $nav-padding: 1px 0
     z-index: 1000
     background-color: $background-color
 
+    ul,li
+        margin: 0 0 1.5rem 1.5rem
+
     > .list
         list-style: none
         margin: 0 auto
@@ -27,6 +30,9 @@ $nav-padding: 1px 0
         > .item
             display: inline-block
             margin-right: $nav-spacing
+
+            &:last-child
+                margin-right: 0
 
             > .link
                 display: inline-block
