--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -5,8 +5,7 @@
     > h1
         text-align: center
         margin-bottom: 1rem
-
-
+        
 ul, li
     margin: 0 0 1.5rem 1.5rem
     padding: 0
@@ -15,15 +14,6 @@ ul, li
 li
     margin-bottom: 5px
 
-.about ul
-    padding: 0
-    margin: 0 0 10px 0 // Add space below the list as needed
-
-.about li
-    padding: 0
-    margin: 0 0 1rem 0
-    list-style: none
-
 hr
     border: none
     height: 1px
@@ -31,6 +21,10 @@ hr
     margin: 15px 0
 
 .about 
+
+    ul,li
+        list-style: none
+        margin: 0 0 1.5rem 0
     img
         margin: 0 auto
         display: block
